--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Blog Feed</title>
+    <title>Hello</title>
   </head>
   <body>
-    <h1>{{ title }}</h1>
-    <ul>
-      {% for entry in entries %}
-        <li><a href="{{ entry.link }}">{{ entry.title }}</a></li>
-      {% endfor %}
-    </ul>
+    <h1>Hello</h1>
   </body>
 </html>
